# portway

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
config/: portway.example.toml
docs/: ARCHITECTURE.md  CLI.md  DEPENDENCIES.md  HTTPS.md  INSTALL.md  NIXOS.md  PROTOCOL.md  SECURITY.md  TROUBLESHOOTING.md
packaging/nixos/: package.nix  portway.nix
packaging/systemd/: portway.service
packaging/udev/: 70-portway-uinput.rules
scripts/: deploy-linux  generate-test-cert  install-linux  uninstall-linux
src/: auth.rs  config.rs  lib.rs  local_pairing.rs  main.rs  protocol.rs  server.rs  session.rs
src/input/: keymap.rs  linux.rs  mod.rs
web/: app.js  index.html  style.css
